Добавлен вывод мероприятий по  filter
