# docs/swagger.yaml
@@ -452,6 +452,16 @@ paths:
       - application/json
       description: Возвращает данные мероприятий по ID
       parameters:
+      - default: all
+        description: Фильтр статуса
+        enum:
+        - all
+        - past
+        - ongoing
+        - upcoming
+        in: query
+        name: filter
+        type: string
       - default: 1
         description: Номер страницы
         in: query
